--- a/HW_1/hw_1.ipynb
+++ b/HW_1/hw_1.ipynb
@@ -901,7 +901,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.6 (default, Aug 11 2023, 19:44:49) \n[Clang 15.0.0 (clang-1500.0.40.1)]"
   },
   "orig_nbformat": 4,
   "vscode": {
